reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__flatten_struct_with_nested_flatten-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Outer"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Outer"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.serde.Inner": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.Inner",
        "required": [
          "z"
        ],
        "properties": {
          "z": {
            "$ref": "#/components/schemas/std.string.String"
          }
        }
      },
      "reflectapi_demo.tests.serde.Middle": {
        "allOf": [
          {
            "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Inner"
          },
          {
            "type": "object",
            "title": "reflectapi_demo.tests.serde.Middle",
            "required": [
              "y"
            ],
            "properties": {
              "y": {
                "$ref": "#/components/schemas/u32"
              }
            }
          }
        ]
      },
      "reflectapi_demo.tests.serde.Outer": {
        "allOf": [
          {
            "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Middle"
          },
          {
            "type": "object",
            "title": "reflectapi_demo.tests.serde.Outer",
            "required": [
              "x"
            ],
            "properties": {
              "x": {
                "$ref": "#/components/schemas/std.string.String"
              }
            }
          }
        ]
      },
      "std.string.String": {
        "description": "UTF-8 encoded string",
        "type": "string"
      },
      "u32": {
        "description": "32-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
