reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__flatten_struct_with_nested_flatten.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::serde::Outer"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::serde::Outer"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::Inner",
        "fields": {
          "named": [
            {
              "name": "z",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::Middle",
        "fields": {
          "named": [
            {
              "name": "y",
              "type": {
                "name": "u32"
              },
              "required": true
            },
            {
              "name": "inner",
              "type": {
                "name": "reflectapi_demo::tests::serde::Inner"
              },
              "required": true,
              "flattened": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::Outer",
        "fields": {
          "named": [
            {
              "name": "x",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            },
            {
              "name": "nested",
              "type": {
                "name": "reflectapi_demo::tests::serde::Middle"
              },
              "required": true,
              "flattened": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::Inner",
        "fields": {
          "named": [
            {
              "name": "z",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::Middle",
        "fields": {
          "named": [
            {
              "name": "y",
              "type": {
                "name": "u32"
              },
              "required": true
            },
            {
              "name": "inner",
              "type": {
                "name": "reflectapi_demo::tests::serde::Inner"
              },
              "required": true,
              "flattened": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::Outer",
        "fields": {
          "named": [
            {
              "name": "x",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            },
            {
              "name": "nested",
              "type": {
                "name": "reflectapi_demo::tests::serde::Middle"
              },
              "required": true,
              "flattened": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      }
    ]
  }
}
